# diffstar

./: .coveragerc  .gitignore  .readthedocs.yml  CHANGES.rst  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: linting.yaml  linting.yml  monthly-warning-test.yaml  monthly-warning-test.yml  test_releases.yaml  test_releases.yml  tests.yml  tests_cron.yaml  tests_cron.yml
diffstar/: __init__.py  _version.py  alt_consumption.py  constants.py  defaults.py  defaults_mgash_model.py  fit_smah_helpers.py  gas.py  kernel_builders.py  main_sequence.py  mgas_model.py  mgas_model_flat.py  quenching.py  sfh.py  sfh_model.py  sfh_model_flat.py  sfh_model_mgash.py  sfh_model_tpeak.py  sfh_model_tpeak5.py  stars.py  utils.py
notebooks/: dev_lax_lagged_gas.ipynb  diffstar_fitter_demo.ipynb  validate_tw_dmgas_dt_kernel.ipynb
scripts/: diffstar_fitting_script_umachine.py  diffstar_fitting_script_umachine_mgash.py  galacticus_diffstar_fitter_script.py  galacticus_diffstar_fitter_script_mgash.py  generate_unit_testing_data.py  history_fitting_all_SMDPL.py  history_fitting_script.py  history_fitting_script_SMDPL.py  history_fitting_script_SMDPL_tpeak.py  history_fitting_script_TNG.py  history_fitting_script_TNG_mgash.py  load_bpl.py  load_smah_data.py  load_smah_data_SMDPL.py  run_SMDPL_fitter.sh  run_galacticus_diffstar_fits.sh  run_galacticus_diffstar_fits_mgash.sh  run_tng_fitter.sh  run_tng_fitter_mgash.sh  run_umachine_smdpl_fitter.sh  run_umachine_smdpl_fitter_mgash.sh  save_SMDPL_histories.py  smdpl_diffstar_fitting_script.py  smdpl_fitting_script.py
(+220 files in other folders)
